local assets for github pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Add To Organization</title>
-  <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
       <button type="submit">submit</button>
     </form>
   </div>
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="js/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
